@@ -8,6 +8,16 @@ Bug Fixes
   along ``_query`` and/or ``_anchor`` arguments to the
   ``mapper.generate`` function, resulting in blowups.
 
+- When two views were registered with differering ``for`` interfaces
+  or classes, and the ``for`` of first view registered was a
+  superclass of the second, the ``repoze.bfg` view machinery would
+  incorrectly associate the two views with the same "multiview".
+  Multiviews are meant to be collections of views that have *exactly*
+  the same for/request/viewname values, without taking inheritance
+  into account.  Symptom: wrong view callable found even when you had
+  correctly specified a ``for_`` interface/class during view
+  configuration for one or both view configurations.
+
 Backwards Incompatibilities
 ---------------------------
 
